Fixed mobile alignment for ImageOverlay

--- a/src/app/component/ProductAttributeValue/ProductAttributeValue.style.scss
+++ b/src/app/component/ProductAttributeValue/ProductAttributeValue.style.scss
@@ -60,6 +60,11 @@
         position: absolute;
         top:0;
         left:0;
+        margin: .5rem;
+
+        @include after-mobile {
+            margin: 0;
+        }
     }
 
     &-Color,
